# academic-research-mcp

./: .env.example  LICENSE  README.md  pyproject.toml  server.py  setup_wizard.py
core/: arxiv.py  crossref.py  semantic.py  translator.py
