[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-research-mcp"
version = "0.1.0"
description = "MCP server for academic research — search papers, analyze citations, generate BibTeX, translate abstracts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
academic-research-mcp = "server:main"
